[package]
name = "ChatServer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bcrypt = "0.15"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
fs2 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ctrlc = "3.4"
